Add app.set trus proxy  so it accepts cross-origin secure session cookies.
